--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lodash": "^4.17.21",
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
+    "qrcode": "^1.5.0",
     "swiper": "^5.4.5",
     "vue": "^2.6.11",
     "vue-router": "^3.5.3",
